fixed spacing problems on footer

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,7 @@
   }
 
   footer {
-    @apply bg-[#f5f5f5] dark:bg-[#181717];
+    @apply bg-[#f5f5f5] dark:bg-[#131312];
   }
 
   a {
@@ -80,6 +80,7 @@
   a:hover {
     @apply text-[#444444] dark:text-[#c3c3c3];
     transition: all 0.2s ease-in-out;
+    @apply border-b ;
   }
 
   .connect-wrapper {
